# VRez

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  TODOForLaptop.txt  main.cpp  readme.md
Assets/Materials/: Boombox.json  Castle.json  Chessboard.json  Suzanne.json
Assets/Models/: Cube.mtl
Assets/Models/BoomBox/: BoomBox.json
Assets/Models/Castle/: Castle.json
Assets/Models/Chessboard/: Chessboard.json
Assets/Models/Suzanne/: Suzanne.json
Assets/Shaders/: base.vert  forward.frag  fullscreen.vert  gbuffer.frag  gradient.comp  lighting.frag  post_processing.frag  shadow.frag  shadow.geom  shadow.vert  skybox.frag
Assets/Shaders/BasicModelShader/: basic.frag  basic.vert
Assets/Shaders/BasicShader/: basic.frag  basic.vert
Assets/Shaders/Headers/: csm.glsl  fxaa.glsl  ibl.glsl  pbr.glsl  shadow.glsl  uniform_camera.glsl  uniform_lights.glsl  util.glsl
Assets/Shaders/Skybox/: Skybox.frag  Skybox.vert
Assets/Shaders/UtilShaders/: uniform_view.glsl
Assets/Skybox/: skybox.json
Core/: CMakeLists.txt
Core/AssetManager/include/: MeshManager.h  ResourceManager.h  TextureManager.h
Core/AssetManager/src/: MeshManager.cpp  TextureManager.cpp
Core/Camera/include/: Camera.h
Core/Camera/src/: Camera.cpp
Core/GFX/include/: DeferredRenderer.h  ForwardPass.h  GBufferPass.h  LightingPass.h  PbrRenderer.h  PostProcessingPass.h  RenderPass.h  ShadowPass.h  SkyboxPass.h
Core/GFX/src/: ForwardPass.cpp  GBufferPass.cpp  LightingPass.cpp  PbrRenderer.cpp  PostProcessingPass.cpp  ShadowPass.cpp  SkyboxPass.cpp
Core/JobSystem/: Job.h  JobSystem.cpp  JobSystem.h
Core/JobSystem/include/: Job.h  JobSystem.h
Core/JobSystem/src/: JobSystem.cpp
Core/Light/include/: Light.h  LightManager.h  LightUtil.h
Core/Light/src/: LightManager.cpp  LightUtil.cpp
Core/MeshInstance/include/: MeshInstance.h  MeshInstanceManager.h
Core/MeshInstance/src/: MeshInstanceManager.cpp
Core/MeshLoader/include/: MeshLoader.h
Core/MeshLoader/src/: MeshLoader.cpp
Core/MyVulkan/: VulkanState.cpp  VulkanState.h
Core/MyVulkan/include/: Descriptor.h  DescriptorSets.h  MeshInstance.h  VertexFormats.h  VulkanBuffer.h  VulkanComputePipeline.h  VulkanGraphicsPipeline.h  VulkanImage.h  VulkanMesh.h  VulkanPipeline.h  VulkanPrefab.h  VulkanState.h  VulkanTexture.h  VulkanUtil.h
Core/MyVulkan/src/: MeshInstance.cpp  VertexFormats.cpp  VulkanBuffer.cpp  VulkanComputePipeline.cpp  VulkanGraphicsPipeline.cpp  VulkanImage.cpp  VulkanMesh.cpp  VulkanPipeline.cpp  VulkanPrefab.cpp  VulkanState.cpp  VulkanTexture.cpp  VulkanUtil.cpp
Core/Resource/include/: DescriptorSets.h  MaterialRegistry.h  MeshManager.h  ObjectRegistry.h  PipelineManager.h  ResourceManager.h  ResourceRegistry.h  TextureManager.h  VulkanMaterial.h  VulkanMesh.h  VulkanObject.h  VulkanPrefab.h  VulkanSkybox.h  VulkanTexture.h
Core/Resource/src/: MaterialRegistry.cpp  MeshManager.cpp  ObjectRegistry.cpp  PipelineManager.cpp  TextureManager.cpp  VulkanMaterial.cpp  VulkanMesh.cpp  VulkanObject.cpp  VulkanPrefab.cpp  VulkanSkybox.cpp  VulkanTexture.cpp
Core/ShaderCompiler/include/: ShaderCompiler.h
Core/ShaderCompiler/src/: ShaderCompiler.cpp
Core/TextureLoader/include/: TextureLoader.h
Core/TextureLoader/src/: TextureLoader.cpp
Core/ThreadPool/include/: ThreadPool.h
Core/ThreadPool/src/: ThreadPool.cpp
Core/UI/include/: UI.h  UIRenderer.h
Core/UI/src/: UI.cpp  UIRenderer.cpp
Core/Window/: Window.cpp  Window.h
Core/Window/include/: Window.h
Core/Window/src/: Window.cpp
Util/: CMakeLists.txt  Pointee.h  Singleton.h
Util/Debug/: Assert.h  Debug.h
Util/FileSystem/include/: FileSystem.h  JsonFile.h  JsonInput.h  MeshLoader.h  TextureLoader.h
Util/FileSystem/src/: FileSystem.cpp  JsonFile.cpp  JsonInput.cpp  MeshLoader.cpp  TextureLoader.cpp
